Day 3: chceck system safety