@@ -1,13 +1,12 @@
-import javax.lang.model.type.ArrayType;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.util.ArrayList;
 
 import static java.lang.System.out;
 
-import java.util.Collections;
-
 public class Matrix {
+    public static final String underlineStart = "\u001B[4m";
+    public static final String underlineEnd = "\u001B[0m";
     public int processes; // aka Rows
     public int resources; // aka Columns
     private int row_index = 0;
@@ -35,20 +34,19 @@ public class Matrix {
     }
 
     public void printRequest() {
+        out.print("\nRequest Matrix:");
         // ANSI escape sequence for underline
-        String underlineStart = "\u001B[4m";
-        String underlineEnd = "\u001B[0m";
         out.print("\n    ");
         for (int i = 'A'; i < this.resources + 'A'; i++) {
             out.print(underlineStart + (char) i + underlineEnd + " ");
         }
         out.println();
         // for every process
-        for (int i = 0; i < this.data.size(); i++) {
-            out.print("p" + this.data.get(i).get(0) + ": ");
+        for (ArrayList<Integer> datum : this.data) {
+            out.print("p" + datum.getFirst() + ": ");
             // for every resource
             for (int j = 0; j < this.resources; j++) {
-                out.print(this.data.get(i).get(j + 1) + " ");
+                out.print(datum.get(j + 1) + " ");
             }
             out.println();
         }
@@ -104,6 +102,25 @@ public class Matrix {
         }
     }
 
+    public ArrayList<ArrayList<Integer>> populateRequestsFromTxt(BufferedReader br, String line) throws IOException, NumberFormatException {
+        ArrayList<ArrayList<Integer>> queue_of_requests = new ArrayList<>(0);
+        do {
+            // {process id, requested A, requested B, requested C, requested D}
+            ArrayList<Integer> request = new ArrayList<>(this.resources);
+            // split the string by spaces
+            String[] numbers_as_string = line.split("\\s+|:");
+            // E.g. "3:6 7 4 3" -> [3, 6, 7, 4, 3]
+            for (String s : numbers_as_string) {
+                request.add(Integer.parseInt(s));
+            }
+            queue_of_requests.add(request);
+            line = br.readLine();
+        }
+        // add all numbers into allocation matrix until empty line detected
+        while (line != null && !line.trim().isEmpty());
+        return queue_of_requests;
+    }
+
     public int getRowIndex() {
         return row_index;
     }
@@ -119,36 +136,4 @@ public class Matrix {
     public void setData(ArrayList<ArrayList<Integer>> newData) {
         this.data = newData;
     }
-
-    public ArrayList<ArrayList<Integer>> populateRequestsFromTxt(BufferedReader br, String line) throws IOException, NumberFormatException {
-        ArrayList<ArrayList<Integer>> queue_of_requests = new ArrayList<ArrayList<Integer>>(0);
-        do {
-            // {process id, requested A, requested B, requested C, requested D}
-            ArrayList<Integer> request = new ArrayList<>(this.resources);
-            // split the string by spaces
-            String[] numbers_as_string = line.split("\\s+|:");
-            // E.g. "3:6 7 4 3" -> [3, 6, 7, 4, 3]
-            for (int i = 0; i < numbers_as_string.length; i++) {
-                request.add(Integer.parseInt(numbers_as_string[i]));
-            }
-            queue_of_requests.add(request);
-            line = br.readLine();
-        }
-        // add all numbers into allocation matrix until empty line detected
-        while (line != null && !line.trim().isEmpty());
-        return queue_of_requests;
-    }
-
 }
-//    adds data in order of proccess_id to array_of_req
-//    private void addRequestToQueue(int process_id, ArrayList<Integer> data, ArrayList<Integer> array_of_requests) {
-//        // Find the index where the number should be inserted
-//        int index = Collections.binarySearch(array_of_requests, order_number);
-////        out.println(order_number + " " + array_of_requests + " "); // Uncomment to see state of request array
-//        // If index -1 make it insertion point
-//        if (index < 0) {
-//            index = -index - 1;
-//        }
-//        this.array_of_requests.add(index, order_number);
-//        this.data.add(index, data); // requests will be sorted before simulation with this step
-//    }
